OLParser/CommandLineParser - further URL() to URI() constructor conversions